Make grid centered with correct spacing

--- a/src/App.css
+++ b/src/App.css
@@ -7,4 +7,31 @@ html {
 main {
   width: 100vw;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+header {
+  width: 100vw;
+  height: 25vh;
+  background-color: #3BB78A;
+  margin-bottom: 5vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+button {
+  width: 20vw;
+  height: 5vh;
+  font-size: 1.5rem;
+  background-color: #3BB78A;
+  border: none;
+  color: #ffffff;
+}
+
+button:hover {
+  cursor: pointer;
+  color: blue;
 }
