--- a/src/MovieContainer.css
+++ b/src/MovieContainer.css
@@ -1,7 +1,8 @@
 .movie-container {
-  /* width: 100vw;
-  height: 80vh; */
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-column-gap: 1.5rem;
+  grid-row: auto;
+  grid-row-gap: 25vh;
+  grid-column-gap: 10vw;
+  margin: 0;
 }
